# AI-Powered-Code-Review-Automation-System

./: .ai-review.yml  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 105a11a75a40_initial_schema.py  4b430308e297_initial_schema.py  d0b237e4de22_initial_schema.py
app/: main.py
app/agents/: base_agent.py  bug_agent.py  performance_agent.py  security_agent.py  style_agent.py  synthesizer.py
app/api/: analytics.py  health.py  repositories.py  reviews.py  webhooks.py
app/core/: config.py  security.py
app/db/: session.py
app/graph/: __init__.py  review_graph.py
app/models/: __init__.py  comment.py  pattern.py  pull_request.py  repository.py  review.py  webhook_event.py
app/schemas/: review.py  webhook.py
app/services/: diff_parser.py  embedding_service.py  feedback_detector.py  github_service.py  llm_client.py  pattern_matcher.py  review_orchestrator.py
app/tasks/: __init__.py  analytics_tasks.py  celery_app.py  review_tasks.py
app/utils/: cache.py  cost_tracker.py  rate_limiter.py
docker/: Dockerfile  docker-compose.yml
docx/: API_SPECIFICATION.md  ARCHITECTURE.md  CASE_STUDY.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  INDEX.md  PRD.md  PROJECT_OVERVIEW.md  README.md  SETUP.md  TECHNICAL_SPECIFICATION.md
tests/: conftest.py
tests/test_agents/: test_style_agent.py
tests/test_api/: test_webhooks.py
tests/test_services/: test_llm_client.py
