[tool.poetry]
name = "ai-code-reviewer"
version = "1.0.0"
description = "AI-powered multi-agent code review system for GitHub pull requests"
authors = ["Vivek <vivek@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

# Data Validation
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# Redis & Celery
redis = {extras = ["hiredis"], version = "^5.0.0"}
celery = {extras = ["redis"], version = "^5.3.0"}

# HTTP Client
httpx = "^0.28.1"

# GitHub
PyGithub = "^2.3.0"
PyJWT = {extras = ["cryptography"], version = "^2.8.0"}
cryptography = "^42.0.0"

# Google Gemini
google-genai = "^1.10.0"

# LangGraph / LangChain
langchain-core = "^0.2.22"
langgraph = "^0.1.0"

# Pinecone Vector DB
pinecone-client = "^3.2.0"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.28.1"
ruff = "^0.4.0"
mypy = "^1.9.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
